syntax = "proto3";

package notification.v1;

option go_package = "github.com/titan-commerce/backend/notification-service/proto/notification/v1;notificationv1";

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);
}

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_ORDER_PLACED = 1;
  NOTIFICATION_TYPE_PAYMENT_SUCCESS = 2;
  NOTIFICATION_TYPE_SHIPMENT_UPDATE = 3;
  NOTIFICATION_TYPE_FLASH_SALE_ALERT = 4;
  NOTIFICATION_TYPE_COIN_REWARD = 5;
}

enum NotificationChannel {
  NOTIFICATION_CHANNEL_UNSPECIFIED = 0;
  NOTIFICATION_CHANNEL_EMAIL = 1;
  NOTIFICATION_CHANNEL_SMS = 2;
  NOTIFICATION_CHANNEL_PUSH = 3;
  NOTIFICATION_CHANNEL_IN_APP = 4;
}

message Notification {
  string notification_id = 1;
  string user_id = 2;
  NotificationType type = 3;
  string title = 4;
  string message = 5;
  bool read = 6;
  string created_at = 7;
}

message SendNotificationRequest {
  string user_id = 1;
  NotificationType type = 2;
  string title = 3;
  string message = 4;
  repeated NotificationChannel channels = 5;
}

message SendNotificationResponse {
  bool success = 1;
  string notification_id = 2;
}

message GetNotificationsRequest {
  string user_id = 1;
  int32 page_size = 2;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
}

message MarkAsReadRequest {
  string notification_id = 1;
}

message MarkAsReadResponse {
  bool success = 1;
}
